<resources>
    <string name="app_name">Smart List</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_description">Manage your money by keeping track of your expenses and provide estimates of costs per day, week and month.</string>
    <string name="cloud_description">Keep your data safe in sync across multiple devices enabling you to use the app even in offline mode.</string>
    <string name="sheet_description">Transform your lists into sheets that are compatible with Microsoft Excel or Google Sheets.</string>
    <string name="ai_description">Artificial Intelligence makes it easy and fast to trace your costs by using Google Assistant or scanning a receipt.</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="adaptive_mode">Adaptive Mode</string>
    <string name="auto_fill">Auto Fill</string>
    <string name="recommendations">Recommendations</string>
    <string name="currencies">Currencies</string>
    <string name="statistics">Statistics</string>
    <string name="adaptive_description">Adaptive mode adjusts the theme of Smart List making it easier on your eyes by dimming the light in the darkness or by making the screen more visible in the strong light</string>
    <string name="switch_automatically">Switch automatically between modes</string>
    <string name="only_light_mode">Only light mode</string>
    <string name="only_dark_mode">Only dark mode</string>
    <string name="search_in_categories">Search in categories</string>
    <string name="loading_data">Personalizing your experience&#8230;</string>
    <string name="add_category">Add Category</string>
    <string name="search_category_item">Search a category or an product</string>
    <string name="category_name">Category name</string>
    <string name="move_products">Move products from other categories</string>
    <string name="no_categories_products">No categories or products found\u00A0</string>
    <string name="no_categories_for">No categories contain \"%1$s\"</string>
    <string name="edit_category">Edit Category</string>
    <string name="no_products">No products found %1$s</string>
    <string name="search_products">Search products</string>
    <string name="currency_description">Select the currencies that you might use so they can be available even offline.
        Smart List will refresh the currency exchange rates each time the app starts.
    </string>
    <string name="search_for_currency">Search for currency</string>
    <string name="no_result_found">No result found</string>
</resources>
