<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        tools:context=".activity.CurrencyActivity">

    <TextView
            android:id="@+id/textCurrencies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/noto"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/currencies"
            android:textColor="?attr/primaryTextColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageBack"
            app:layout_constraintStart_toEndOf="@+id/imageBack"
            app:layout_constraintTop_toTopOf="@+id/imageBack"/>

    <ImageView
            android:id="@+id/imageBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:src="?attr/iconBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/textCurrenciesDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/noto"
            android:text="@string/currency_description"
            android:textColor="?attr/secondaryTextColor"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageBack"
            app:layout_constraintTop_toBottomOf="@+id/textCurrencies"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/search_for_currency"
            android:imeOptions="flagNoExtractUi|actionNone"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?attr/colorAccent"
            app:met_textColor="?attr/primaryTextColor"
            app:met_textColorHint="@color/gray"
            app:layout_constraintEnd_toStartOf="@+id/imageCancelSearch"
            app:layout_constraintStart_toStartOf="@+id/textCurrenciesDescription"
            app:layout_constraintTop_toBottomOf="@+id/textCurrenciesDescription"/>

    <ImageView
            android:id="@+id/imageCancelSearch"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="4dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="?attr/iconCancel"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editSearch"
            app:layout_constraintBottom_toBottomOf="@+id/editSearch"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listCurrencies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/textNoResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:fontFamily="@font/noto"
            android:padding="4dp"
            android:text="@string/no_result_found"
            android:textColor="?attr/secondaryTextColor"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/editSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>